--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,14 +8,28 @@
     android:background="#3498db"
     tools:context=".HomeActivity">
 
+    <TextView
+        android:id="@+id/txtViewUserLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text=" Or Login as User"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="@+id/btnUser"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="@+id/btnUser"
+        app:layout_constraintTop_toBottomOf="@+id/btnUser" />
+
     <Button
         android:id="@+id/btnUser"
         android:layout_width="208dp"
         android:layout_height="48dp"
+        android:background="@color/colorPrimary"
         android:drawableLeft="@drawable/icon"
-        android:text="Client"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="User"
 
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,30 +41,33 @@
         android:layout_width="208dp"
         android:layout_height="48dp"
 
-        android:drawableLeft="@drawable/icon"
+        android:background="@color/colorPrimary"
 
+        android:drawableLeft="@drawable/icon"
         android:text="Artisan"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnUser"
-        app:layout_constraintVertical_bias="0.106" />
+        app:layout_constraintVertical_bias="0.451" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="63dp"
-        android:layout_height="47dp"
+        android:layout_width="138dp"
+        android:layout_height="49dp"
         android:layout_marginStart="180dp"
         android:layout_marginEnd="193dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.24"
+        app:layout_constraintHorizontal_bias="0.44"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.467"
-        tools:text="I am a" />
+        tools:text="Register as a:" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
@@ -64,4 +81,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.28" />
+
+    <TextView
+        android:id="@+id/txtViewArtisanLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="168dp"
+        android:text=" Or Login as Artisan"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="@+id/btnUser"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="@+id/btnUser"
+        app:layout_constraintTop_toBottomOf="@+id/btnUser" />
 </android.support.constraint.ConstraintLayout>
