--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_centerHorizontal="false"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:src="@drawable/splash3"
+        android:src="@drawable/logo"
         app:civ_border_color="#FF000000" />
 
 
