"Modified Artisan Register Class Marvel"

--- a/app/src/main/res/layout/activity_artisan_register.xml
+++ b/app/src/main/res/layout/activity_artisan_register.xml
@@ -70,6 +70,7 @@
         android:ems="10"
         android:hint="Enter Password"
         android:inputType="textPassword"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.451"
@@ -106,12 +107,14 @@
         android:ems="10"
         android:hint="Enter ID Number"
         android:inputType="number"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.438"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEmail"
-        app:layout_constraintVertical_bias="0.082" />
+        app:layout_constraintVertical_bias="0.082"
+        tools:visibility="visible" />
 
     <EditText
         android:id="@+id/txtArtisanEmail"
