--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -92,7 +92,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="*Password*"
             android:inputType="textPassword"
             android:text=""
             android:textColor="@color/colorPrimary"
